[package]
name = "remote-image-compression"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.10.2"
anyhow = "1.0.97"
base64 = "0.22.1"
image = "0.25.5"
mime = "0.3.17"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.19.0"
tokio = { version = "1.44.1", features = ["macros", "fs", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
